--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -2,6 +2,11 @@ name: Build x86 Image
 
 on:
   pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
     branches:
     - master
     - release-*
@@ -21,9 +26,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: '1.19'
   GOSEC_VERSION: '2.14.0'
-  KIND_VERSION: v0.17.0
   HELM_VERSION: v3.10.1
 
 jobs:
@@ -35,9 +38,8 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -159,9 +161,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -180,10 +181,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -214,6 +214,7 @@ jobs:
 
   k8s-netpol-e2e:
     name: Kubernetes Network Policy E2E
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 60
@@ -252,9 +253,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -273,10 +273,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -303,6 +302,7 @@ jobs:
 
   k8s-netpol-legacy-e2e:
     name: Kubernetes Network Policy Legacy E2E
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 60
@@ -341,9 +341,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -354,7 +353,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles('${{ env.E2E_DIR }}/**/go.sum') }}
+          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles(format('{0}/**/go.sum', env.E2E_DIR)) }}
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Build e2e binaries
@@ -362,10 +361,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -392,6 +390,7 @@ jobs:
 
   cyclonus-netpol-e2e:
     name: Cyclonus Network Policy E2E
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'network policy')
     needs: build-kube-ovn
     runs-on: ubuntu-22.04
     timeout-minutes: 30
@@ -424,10 +423,9 @@ jobs:
           fi
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -464,9 +462,6 @@ jobs:
           - ipv4
           - ipv6
           - dual
-        mode:
-          - overlay
-          - underlay
     steps:
       - uses: actions/checkout@v3
 
@@ -490,9 +485,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -511,10 +505,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -533,14 +526,13 @@ jobs:
           sudo chown -R $(id -un). ~/.kube/
 
       - name: Install Kube-OVN
-        run: make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
+        run: make kind-install-${{ matrix.ip-family }}
 
       - name: Run E2E
         working-directory: ${{ env.E2E_DIR }}
         env:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
-          E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
 
       - name: Cleanup
@@ -574,9 +566,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -595,10 +586,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -632,10 +622,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -672,10 +661,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -708,10 +696,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -746,10 +733,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -805,9 +791,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -826,10 +811,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download kube-ovn image
         uses: actions/download-artifact@v3
@@ -873,10 +857,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -936,9 +919,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -957,10 +939,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -1029,9 +1010,8 @@ jobs:
 
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
-        id: go
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1050,10 +1030,9 @@ jobs:
         run: make e2e-compile
 
       - name: Install kind
-        run: |
-          curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
-          chmod +x ./kind
-          sudo mv kind /usr/local/bin
+        uses: helm/kind-action@v1
+        with:
+          install_only: true
 
       - name: Download image
         uses: actions/download-artifact@v3
@@ -1104,6 +1083,7 @@ jobs:
       - no-np-test
       - cilium-chaining-e2e
       - kube-ovn-security-e2e
+    if: always() && !contains(needs.*.result, 'failure') && !contains(needs.*.result, 'cancelled')
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -1145,7 +1125,7 @@ jobs:
           make scan
 
       - name: Push
-        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'release') }}
+        if: github.ref_name == github.event.repository.default_branch || startsWith(github.ref_name, 'release-')
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
