--- a/.github/workflows/build-arm64-image.yaml
+++ b/.github/workflows/build-arm64-image.yaml
@@ -19,9 +19,6 @@ concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
-env:
-  GO_VERSION: '1.19'
-
 jobs:
   build:
     name: Build arm64
@@ -30,9 +27,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: '${{ env.GO_VERSION }}'
+          go-version-file: go.mod
           check-latest: true
-        id: go
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -55,10 +51,10 @@ jobs:
           restore-keys: ${{ runner.os }}-${{ env.GO_FULL_VER }}-arm64-
 
       - name: Build
-        run: |
-          make release-arm || make release-arm
+        run: make release-arm || make release-arm
+
       - name: Push
-        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'release') }}
+        if: github.ref == github.event.repository.default_branch || startsWith(github.ref, 'release-')
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
